Fixed https://github.com/surveyjs/survey-library/issues/5507 - Survey shifts when scrollbar appears

--- a/packages/survey-creator-core/src/components/simulator.scss
+++ b/packages/survey-creator-core/src/components/simulator.scss
@@ -140,4 +140,5 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  overflow-y: overlay;
 }
